allow level generation for level 2 dungeons

--- a/resources/tilesets/l1.ini
+++ b/resources/tilesets/l1.ini
@@ -34,11 +34,18 @@ upStairs7 = 13
 upStairs8 = 67
 upStairs9 = 68
 
-# downStairs values define a 2x2 block for stairs down
-downStairs1 = 59
-downStairs2 = 60
-downStairs3 = 57
-downStairs4 = 58
+# downStairs values define a 3x3 block for stairs down
+downStairs1 = 57
+downStairs2 = 58
+downStairs3 = 13
+
+downStairs4 = 59
+downStairs5 = 60
+downStairs6 = 13
+
+downStairs7 = 13
+downStairs8 = 13
+downStairs9 = 13
 
 # Map of closed door til entries to open door til entries
 [DoorMap]
@@ -53,7 +60,7 @@ downStairs4 = 58
 # normal shows the percentage of tiles that will be the 
 # normal value from the Basic section, all others are of the format
 # "index = weight", where weight adjusts it's frequency relative to the others
-# No section for a block just mean it will always be the "basic" version
+# No section for a block just means it will always be the "basic" version
 [XWall]
 normal = 75
 97 = 33
